tests/tooling/fixtures/native/recovery/negative/negative_assignment_parser_missing_update_semicolon.objc3
// Expected diagnostic code(s): O3P104.
module NegativeAssignmentParserMissingUpdateSemicolon;

fn main() -> i32 {
  let value = 1;
  value++
  return value;
}